feat!: implement request resending

--- a/config-master.json
+++ b/config-master.json
@@ -1,6 +1,7 @@
 {
     "port": 6969,
     "log_file": "log.log",
-    "slaves": [6970],
+    "persistent": true,
+    "slaves": [6971],
     "methods": ["all"]
 }
